Debugging and Editting api documentation and status codes
